--- a/lamoon-frontend/package.json
+++ b/lamoon-frontend/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -45,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.43.4"
+    "sass": "^1.49.9"
   }
 }
