--- a/lamoon-frontend/package.json
+++ b/lamoon-frontend/package.json
@@ -11,13 +11,17 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.1",
     "history": "^5.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
